// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`plugin-select: createStateSelector should select extra properties from state 1`] = `
Object {
  "height": 60,
  "width": 90,
}
`;

exports[`plugin-select: select should forward ref 1`] = `
<SelectState
  _forwardedRef={
    Object {
      "current": null,
    }
  }
  multiplier={0.5}
  props="props"
/>
`;

exports[`plugin-select: select should remove _forwardedRef prop (replaces it with ref) 1`] = `
<Component
  height={60}
  multiplier={0.5}
  props="props"
  width={90}
/>
`;

exports[`plugin-select: select should render component 1`] = `
<h1>
  text
</h1>
`;

exports[`plugin-select: select should render component with extraProps 1`] = `
<Component
  height={60}
  multiplier={0.5}
  props="props"
  width={90}
/>
`;

exports[`plugin-select: select should render component with extraProps and own createStateSelector 1`] = `
<Component
  height={60}
  multiplier={0.5}
  props="props"
  width={90}
/>
`;

exports[`plugin-select: select should render component with extraProps and own static methods 1`] = `
<Component
  height={60}
  multiplier={0.5}
  props="props"
  width={90}
/>
`;

exports[`plugin-select: select should render component with extraProps modifies by ownProps 1`] = `
<Component
  height={30}
  multiplier={0.5}
  props="props"
  width={45}
/>
`;
